🐛 Fix (roughly) InlineTag popup overflow #1069

--- a/kmfrontend/src/frontend/components/karas/InlineTag.scss
+++ b/kmfrontend/src/frontend/components/karas/InlineTag.scss
@@ -15,6 +15,9 @@
 	width: max-content;
 	z-index: 2;
 	color: white;
+	&.right {
+		right: 0;
+	}
 
 	.tag-name {
 		font-weight: bold;
